--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -12,13 +12,13 @@
    type="image/x-icon"
         href="https://manganimy.github.io/TOC/img/fav.ico">
 <meta charset="UTF-8">
-<title>Table of contents</title>
+<title>Shonen Jump GIGA 2019 Summer Vol.1</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump #30 2019">	
+<meta property="og:title" content="Shonen Jump GIGA 2019 Summer Vol.1">	
 <meta property="og:description" content="Table of contents &amp; Author Comments">
-<meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump">
-<meta property="og:image" content="https://manganimy.github.io/TOC/19_30/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/19_30">
+<meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump, JumpGIGA, GIGA">
+<meta property="og:image" content="https://manganimy.github.io/TOC/giga/summer_19_01/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/giga/summer_19_01/">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -27,227 +27,13 @@
 <body>
 <div id="container">
 	<div class="header">
-		<h1><img src="img/top.jpg" alt=""></h1>
-		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
-		<div class="img_wj"><img src="img/img_wj.jpg" alt=""></div>
+		<h1><a target="_blank" href="img/topf.jpg"><img src="img/top.jpg" alt=""></a></h1>
+		<div class="txt_read"><span>Shonen Jump GIGA 2019 Summer Vol.1</span></div>
+		<div class="img_wj"><img src="img/img_giga.jpg" alt=""></div>
 	</div><!-- end .header -->
 
 	<div class="contents">
 		
-		<!-- Haikyu!! -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100014">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Haruichi Furudate</p>
-					My old friend Kohei Uchida's Tokyo Yohei Kabushikigaisha volume 1 is now on sale in Japan!
-				</div>
-			</div>
-		</div>
-		
-		<!-- One Piece -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100020">One Piece <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_oda.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Eiichiro Oda</p>
-					I went to my first Yuzu concert. It's amazing that two people with their guitars can create that much energy.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Demon Slayer: Kimetsu no Yaiba -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100009">Demon Slayer: Kimetsu no Yaiba <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_gotouge.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Koyoharu Gotouge</p>
-					I keep troubling the waiter by saying "tortilla" when I mean to order chai tea.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Dr. STONE -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100010">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_boichi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">BOICHI</p>
-					The stuff the island people are using for ingredients are shells, pearls and other things from the sea. I don't really understand the seaweed.
-				</div>
-			</div>
-		</div>
-		
-		<!-- My Hero Academia -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kohei Horikoshi</p>
-					I'm a bit late, but I've been so excited about the news of the Akira live-action movie. That's been my workweek.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Samurai 8: The Tale of Hachimaru -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_okubo.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Akira Okubo</p>
-					I'm so happy that How to Train Your Dragon 3 seems to be getting a Japanese theatrical release!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Chainsaw Man -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100037">Chainsaw Man <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fujimoto.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Tatsuki Fujimoto</p>
-					I worked while reading Junji Ito's Kaidan and watching Na Hong-jin's The Wailing.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Double Taisei -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kentaro Fukuda</p>
-					I have one weak eye, but do they make glasses for just one eye? Like a Scouter?
-				</div>
-			</div>
-		</div>
-		
-		<!-- We Never Learn -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100035">We Never Learn <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Taishi Tsutsui</p>
-					I'm so happy that there's so much merchandise! My studio is decorated in We Never Learn stuff now!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Beast Children -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Terasaka</p>
-					I was stretching hard and fractured my leg. That can happen...?
-				</div>
-			</div>
-		</div>
-		
-		<!-- The Promised Neverland -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100026">The Promised Neverland <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_demizu.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Posuka Demizu</p>
-					I was carefully choosing which song to play during work, and then two hours went by! I was having too much fun! I'll never land in bed!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Hinomaru Sumo -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100031">Hinomaru Sumo <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_kawada.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kawada</p>
-					I'm so honored to be published alongside Kinnikuman! ... is what I wanted to say last week but I totally forgoooot!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Tokyo Shinobi Squad -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tanaka.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Yuki Tanaka</p>
-					Eating natto with mozuku seaweed vinegar is really healthy. Add mustard if you wish.
-				</div>
-			</div>
-		</div>
-		
-		<!-- ACT-AGE -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100036">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_matsuki.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Tatsuya Matsuki</p>
-					Tsukuda Sensei's been helping me since my Story King submission days. Congratulations to both creators!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Jujutsu Kaisen -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100034">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Gege Akutami</p>
-					I'm sure you've all realized, but for the Givenchy stuff I'm just pretending to know about it.
-				</div>
-			</div>
-		</div>
-		<!-- Yuuna -->
-		<div class="comment_area">
-			<h2><a href="#">Yuragi-sou no Yuuna-san<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_miura.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Tadahiro Miura</p>
-					Even if I was fired and had to work at a campsite where I could earn enough money to live, I'd be bombarded with a lot of work. I would need to be strong.
-
-				</div>
-			</div>
-		</div>
-		<!-- The Last Saiyuki -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100054">The Last Saiyuki <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_nonoue.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Daijiro Nonoue</p>
-					Someone let me know recently that I always close my eyes when I drink something. I never knew.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Yui Kamio Lets Loose -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100055">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Hiroshi Shiibashi</p>
-					I watched the new Godzilla movie. I get so happy when Godzilla appears and the theme song plays.
-				</div>
-			</div>
-		</div>
 		
 	</div><!-- end .contents -->
 	<div id="footer">
