--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -68,7 +68,13 @@
 	    <div class="desc"><h2>Weekly Shonen Magazine #29 2019</h2></div></a>
   </div>
 </div>
-
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_30/">
+      <img src="19_30/img/img_wm.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Magazine #30 2019</h2></div></a>
+  </div>
+</div>
 <div class="clearfix"></div>
 	
 <div class="center" style="text-align:center; line-height:1; font-size:.85em">
