--- a/wsm/TOC/19_30/index.html
+++ b/wsm/TOC/19_30/index.html
@@ -32,9 +32,9 @@
 		<h1><img src="img/top.png" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Magazine posting order &amp; comments from the author.</span></div>
 	<div class="alternate">
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm.jpg" alt="WSM issue 30"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm.png" alt="WSM issue 30"></div>
 			<div class="overlay">
-    		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm1.jpg" style="display: block; width: 100%; height:auto ; "></div>
+    		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm1.png" style="display: block; width: 100%; height:auto ; "></div>
 			</div>
 	</div>
 	
