--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -27,9 +27,9 @@
 <body>
 <div id="container">
 	<div class="header">
-		<h1><a target="_blank" href="img/topf.jpg"><img src="img/top.jpg" alt=""></a></h1>
+		<h1><a target="_blank" href="img/topf.png"><img src="img/top.png" alt=""></a></h1>
 		<div class="txt_read"><span>Shonen Jump GIGA 2019 Summer Vol.1</span></div>
-		<div class="img_wj"><img src="img/img_giga.jpg" alt=""></div>
+		<div class="img_wj"><img src="img/img_giga.png" alt=""></div>
 	</div><!-- end .header -->
 
 	<div class="contents">
