--- a/wsm/TOC/esp.html
+++ b/wsm/TOC/esp.html
@@ -55,9 +55,9 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="#">
-      <img src="19_29/img/img_wm.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Magazine #29 2019</h2></div></a>
+    <a href="19_30/esp">
+      <img src="19_30/img/img_wm.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Magazine #30 2019</h2></div></a>
   </div>
 </div>
 
