--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -58,6 +58,8 @@
 	
 	</div><!-- end .contents -->
 	<div id="footer">
+		<div class="cooyactxt" style="font-weight: 300">TL: <a href="https://twitter.com/RaafGL">@RaafGL</a></div>
+		<div class="cooyactxt">Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></div>		
 		<div class="cooyactxt">&copy; SHUEISHA Inc. All rights reserved.</div>
 	</div><!-- end .footer -->
 </div><!-- end .container -->
