--- a/wsm/TOC/esp.html
+++ b/wsm/TOC/esp.html
@@ -56,7 +56,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="19_30/esp">
-      <img src="19_30/img/img_wm.jpg" alt="" width="600" height="400">
+      <img src="19_30/img/img_wm.png" alt="" width="600" height="400">
 	    <div class="desc"><h2>Weekly Shonen Magazine #30 2019</h2></div></a>
   </div>
 </div>
