--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -17,7 +17,7 @@
 <meta property="og:title" content="Shonen Jump GIGA 2019 Summer Vol.1">	
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump, JumpGIGA, GIGA">
-<meta property="og:image" content="https://manganimy.github.io/TOC/giga/summer_19_01/img/top.jpg">
+<meta property="og:image" content="https://manganimy.github.io/TOC/giga/summer_19_01/img/top.png">
 <meta property="og:url" content="https://manganimy.github.io/TOC/giga/summer_19_01/">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
