--- a/TOC/index.html
+++ b/TOC/index.html
@@ -41,7 +41,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="giga">GIGA/a>
+      <a href="giga">GIGA</a>
     </div>
   </div> 	
   <div class="lang">
