--- a/TOC/giga/index.html
+++ b/TOC/giga/index.html
@@ -40,14 +40,14 @@
 </div>	<!-- end navbar -->
 <div style="margin: 0 8px">	
   <div class="header">
-<img src="img/logo.png" style="width:70%" class="center">
+<img src="img/giga.png" style="width:70%" class="center">
 <h1>Shonen Jump GIGA Table of Contents & Author Comments</h1>
 	</div>
 	  <div class="content">
 <div class="responsive">
   <div class="gallery">
     <a href="summer_19_01">
-      <img src="summer_19_01/img/img_giga.jpg" alt="" width="600" height="400">
+      <img src="summer_19_01/img/img_giga.png" alt="" width="600" height="400">
 	    <div class="desc"><h2>Shonen Jump GIGA 2019 Summer Vol.1</h2></div></a>
   </div>
 </div>
