--- a/TOC/index.html
+++ b/TOC/index.html
@@ -143,7 +143,10 @@
 <a href="19_30/">
   <img src="img/19_30.jpg">
 </a> 	  
-	  
+<h2><a href="19_31/" style="display:block; width:100%">Weekly Shonen Jump #31 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_31/">
+  <img src="img/19_31.jpg">
+</a> 		  
   </div><!-- end content -->	
 </div> <!-- end margin -->
 </body>
