--- a/TOC/19_31/esp.html
+++ b/TOC/19_31/esp.html
@@ -56,7 +56,7 @@
 	</div><!-- end .contents -->
 	<div id="footer">
 		<div class="cooyactxt" style="font-weight: 300">traducción:</div>
-		<div class="cooyactxt" style="font-weight: 300"><a href="https://twitter.com/MarcosMT0">Marcos</a> &amp; <a href="https://twitter.com/yiyeidi">yiyeidi</a></div>
+		<div class="cooyactxt" style="font-weight: 300"><a href="https://twitter.com/MarcosMT0">Marcos</a></div>
 		<div class="cooyactxt">&copy; SHUEISHA Inc. All rights reserved.</div>
 	</div><!-- end .footer -->
 </div><!-- end .container -->
