--- a/sp/tsugimanga2019/comic.html
+++ b/sp/tsugimanga2019/comic.html
@@ -117,7 +117,10 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
       <div class="box"><img src="img/comics_01.jpg" alt="" width="320" height="460" ></div>
-	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+	  <div class="desc"  style="height:100px;">
+		  <p>Crimson Grimoire</p>
+		  <p>A-10</p>	  
+	  </div>
   </div>
 </div>
 
