--- a/sp/tsugimanga2019/comic.html
+++ b/sp/tsugimanga2019/comic.html
@@ -30,6 +30,12 @@
   margin-right: auto;
   width: 50%;
   }
+.content{
+	width: 100%;
+	max-width:1080px;
+	margin-left:auto;
+	margin-right: auto;
+}		
 .footer{
  display:inline-block;
  width: 100%;
@@ -101,16 +107,15 @@ max-width:100%;
 max-height:170px;"
 }
 div.title {
+	font-weight: bold;
 	overflow:auto;
-    height:100px;
-  padding: .5em 10px;
- 
+	height:100px;
+	padding: .5em 10px;
 }
 div.author {
-	overflow:hidden;
+    overflow:auto;
     height:4em;
     line-height:1;
-    text-overflow: ellipsis;
   padding: .5em 10px;
  
 }
