--- a/sp/tsugimanga2019/comic.html
+++ b/sp/tsugimanga2019/comic.html
@@ -37,12 +37,13 @@
 	margin-right: auto;
 }		
 .footer{
- display:inline-block;
- width: 100%;
-  margin: auto;
+	display:inline-block;
+	width: 100%;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
 }
-p
-{
+p{
 margin: 0;
 padding: 0;
 }
@@ -92,8 +93,8 @@ div.gallery a:active {
 	color: black;
 }
 div.gallery {
-	margin: 5px 0;
-  border: 1px solid #777;
+	margin: 1% 0;
+  border: 2px solid black;
 }
 div.gallery div.box{
 	text-align: center;
