--- a/wss/TOC/19_31/index.html
+++ b/wss/TOC/19_31/index.html
@@ -16,11 +16,11 @@
         href="img/fav.ico">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Sunday #30 2019">	
+<meta property="og:title" content="Weekly Shonen Sunday #31 2019">	
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents">
-<meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_30/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/wss/TOC/19_30">
+<meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_31/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/wss/TOC/19_31">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -29,9 +29,9 @@
 <body>
 <div id="container">
 	<div class="header">
-		<h1><a target="_blank" href="img/top2.jpg"><img src="img/top.jpg" alt=""></a></h1>
+		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 30"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 31"></div>
 	
 	</div><!-- end .header -->	
 	<div class="question_area">
@@ -40,40 +40,11 @@
 		</div>
 		<div class="column weekly">
 
-"Any surprising changes lately?"
+""
         	</div>
 	</div>
 	
 	<div class="contents">
-		
-<!-- Komi-san wa komyusho desu--><div class="comment_area"><h2><a href="#">Komi-san wa komyusho desu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/komisan.png" alt=""></div><div class="r_side"><p class="author">Tomohito Oda</p>My wife's stomach.</div></div></div>
-<!-- Kimi wa 008--><div class="comment_area"><h2><a href="#">Kimi wa 008<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/kimiha008.png" alt=""></div><div class="r_side"><p class="author">Syun Matsuena</p>The conifer got too warm and is wilting. So now the taphrina pruni has started to thrive on my nanking cherries. (TN -Taphirina pruni is a fungal plant pathogen)</div></div></div>
-<!-- SWITCH--><div class="comment_area"><h2><a href="#">SWITCH<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/switch.png" alt=""></div><div class="r_side"><p class="author">Atsushi Namikiri</p>The box for the Fue Ramune toys. </div></div></div>
-<!-- Detective Conan--><div class="comment_area"><h2><a href="#">Detective Conan<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/conan.png" alt=""></div><div class="r_side"><p class="author">Gosho Aoyama</p>They stopped selling Doc Martens. (Sob.)</div></div></div>
-<!-- Maoujo de Oyasumi--><div class="comment_area"><h2><a href="#">Maoujo de Oyasumi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/maojo.png" alt=""></div><div class="r_side"><p class="author">Kagiji Kumanomata</p>My editor said that the Country Ma'ams got smaller. (TN - A type of cookie.)</div></div></div>
-<!-- Yuko sae tatakaeba--><div class="comment_area"><h2><a href="#">Yuko sae tatakaeba<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/yukosae.png" alt=""></div><div class="r_side"><p class="author">Sei Fukui</p>Duck Hunt's Up-B cancel became tolerable! (TN - A Smash brothers reference.)</div></div></div>
-<!-- Major 2nd--><div class="comment_area"><h2><a href="#">Major 2nd<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/major2nd.png" alt=""></div><div class="r_side"><p class="author">Takuya Mitsuda</p>My hair is graying more and more...</div></div></div>
-<!-- Amano Megumi wa suki darake!--><div class="comment_area"><h2><a href="#">Amano Megumi wa suki darake!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/amano.png" alt=""></div><div class="r_side"><p class="author">Nekoguchi</p>Two of the huge trees in my neighborhood were cut down so now the scenery looks a little different.</div></div></div>
-<!-- Ponkotsu-chan Kenshochuu--><div class="comment_area"><h2><a href="#">Ponkotsu-chan Kenshochuu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ponkotsu.png" alt=""></div><div class="r_side"><p class="author">Tsubasa Fukuchi</p>Before I had realized it, the parking lot's ceiling had a swallow's nest on it.</div></div></div>
-<!-- Aozakura Bouei daigakkou Monogatari--><div class="comment_area"><h2><a href="#">Aozakura Bouei daigakkou Monogatari<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/aozakura.png" alt=""></div><div class="r_side"><p class="author">Hikaru Nikaido</p>My set up bridge in order to connect the defense force's cafeteria and bath together. (My art is crying.)</div></div></div>
-<!-- Tonikaku Cawaii--><div class="comment_area"><h2><a href="#">Tonikaku Cawaii<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tonikaku.png" alt=""></div><div class="r_side"><p class="author">Kenjiro Hata</p>The white cat toy I kept as a quasi pet somehow became the second biggest cat in my house...</div></div></div>
-<!-- Tantei Xeno to Nanatsu no Satsujin Misshitsu--><div class="comment_area"><h2><a href="#">Tantei Xeno to Nanatsu no Satsujin Misshitsu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tanteixeno.png" alt=""></div><div class="r_side"><p class="author">Kyouichi Nanatsuki</p>Becoming completely tired of the game I was hooked to not that long ago.</div></div></div>
-<!-- Fire Rabbit!!--><div class="comment_area"><h2><a href="#">Fire Rabbit!!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/firerabbit.png" alt=""></div><div class="r_side"><p class="author">Aya Hirakawa</p>The image quality of the games in the arcades.</div></div></div>
-<!-- Souboutei Kowasubeshi--><div class="comment_area"><h2><a href="#">Souboutei Kowasubeshi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/sobotei.png" alt=""></div><div class="r_side"><p class="author">Kazuhiro Fujita</p>There are so few book stores around nowadays...it's kind of sad...</div></div></div>
-<!-- Undine ha Kyou mo Koi wo suru ka?--><div class="comment_area"><h2><a href="#">Undine ha Kyou mo Koi wo suru ka?<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/undine.png" alt=""></div><div class="r_side"><p class="author">Shinya Misu</p>I've become a little faster at drawing!</div></div></div>
-<!-- Maiko-san chi no Makanai-san--><div class="comment_area"><h2><a href="#">Maiko-san chi no Makanai-san<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/maikosan.png" alt=""></div><div class="r_side"><p class="author">Aiko Koyama</p>If we're talking about right now, then how long it remains sunny during the day.</div></div></div>
-<!-- Gofun go no Sekai--><div class="comment_area"><h2><a href="#">Gofun go no Sekai<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/5fungo.png" alt=""></div><div class="r_side"><p class="author">Hiroshi Fukuda</p>How real Global warming is. (crying).</div></div></div>
-<!-- Anonatsu 1959--><div class="comment_area"><h2><a href="#">Anonatsu 1959<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/anonatsu.png" alt=""></div><div class="r_side"><p class="author">Ashibi Fukui</p>Robot cleaners are so effective and convenient that it's surprising.</div></div></div>
-<!-- Sokyuu no Ariadne--><div class="comment_area"><h2><a href="#">Sokyuu no Ariadne<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ariadne.png" alt=""></div><div class="r_side"><p class="author">Nobuhiro Yagi</p>The taxis within the metropolitan area have changed so fast that I was surprised.</div></div></div>
-<!-- Shumatsu wa Aoi Haru (One-Shot)--><div class="comment_area"><h2><a href="#">Shumatsu wa Aoi Haru (One-Shot)<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/aoiharu.png" alt=""></div><div class="r_side"><p class="author">Akane Ogata</p>Pleased to meet you! I'm a newbie so please enjoy this work! I'm so nervous!!</div></div></div>
-<!-- Chrono Magia: Infinity Gear--><div class="comment_area"><h2><a href="#">Chrono Magia: Infinity Gear<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/chronomugen.png" alt=""></div><div class="r_side"><p class="author">Homura Kawamoto</p>It's like...the weather going from hot to cold so fast is kinda bad.</div></div></div>
-<!-- Hoankan Evans no Uso ~Dead or Love~--><div class="comment_area"><h2><a href="#">Hoankan Evans no Uso ~Dead or Love~<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/hoankan.png" alt=""></div><div class="r_side"><p class="author">Mizuki Kuriyama</p>The surroundings of my alma matter's school. The "Oshidori" is gone now...(TN- This seems to be a restaurant named after a species of duck (But with a different kanji) from what I was able to google up.)</div></div></div>
-<!-- MAO--><div class="comment_area"><h2><a href="#">MAO<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/mao.png" alt=""></div><div class="r_side"><p class="author">Rumiko Takahashi</p> I was surprised to find the eastern part of Kurume where I once lived is now a busy metropolis.</div></div></div>
-<!-- Be Blues!--><div class="comment_area"><h2><a href="#">Be Blues!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/beblues.png" alt=""></div><div class="r_side"><p class="author">Motoyuki Tanaka</p>The amount of grass that's grown in my yard!! I'd better cut it...</div></div></div>
-<!-- Zettai Karen Children--><div class="comment_area"><h2><a href="#">Zettai Karen Children<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/children.png" alt=""></div><div class="r_side"><p class="author">Takashi Shiina</p>I'm not bald, my scalp is just tired.</div></div></div>
-<!-- RYOKO --><div class="comment_area"><h2><a href="#">RYOKO <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ryoko.png" alt=""></div><div class="r_side"><p class="author">Kaito Mitsuhashi</p>Thank you for reading. May everyone's dinner tables prosper. See ya~</div></div></div>
-<!-- Youkai Giga--><div class="comment_area"><h2><a href="#">Youkai Giga<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/yokaigiga.png" alt=""></div><div class="r_side"><p class="author">Satsuki Satou</p>That person in my graduation photo changed suddenly.</div></div></div>
-<!-- Tokaichi Hitoribocchi Nouen--><div class="comment_area"><h2><a href="#">Tokaichi Hitoribocchi Nouen<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tokatihitori.png" alt=""></div><div class="r_side"><p class="author">Yuuji Yokoyama</p>It surprised me that the temperature in Tokaichi passed 38 degrees Celsius.</div></div></div>
 
 	</div><!-- end .contents -->
 	<div id="footer">
