--- a/wss/TOC/19_31/esp.html
+++ b/wss/TOC/19_31/esp.html
@@ -16,11 +16,11 @@
         href="img/fav.ico">
 <title>tabla de contenidos</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Sunday #30 2019">	
+<meta property="og:title" content="Weekly Shonen Sunday #31 2019">	
 <meta property="og:description" content="Tabla de contenidos y comentarios de los autores">
 <meta name="Keywords" content="Table of contents">
-<meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_30/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/wss/TOC/19_30/esp">
+<meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_31/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/wss/TOC/19_31/esp">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -29,9 +29,9 @@
 <body>
 <div id="container">
 	<div class="header">
-		<h1><a target="_blank" href="img/top2.jpg"><img src="img/top.jpg" alt=""></a></h1>
+		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>Los puestos y comentarios de los autores de la Weekly Shonen Sunday de esta semana.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 30"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 31"></div>
 	
 	</div><!-- end .header -->	
 	<div class="question_area">
