--- a/wsm/TOC/19_31/esp.html
+++ b/wsm/TOC/19_31/esp.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Weekly Shonen Magazine #31 2019">	
 <meta property="og:description" content="Tabla de contenidos y comentarios de los autores">
 <meta name="Keywords" content="Table of contents">
-<meta property="og:image" content="https://manganimy.github.io/wsm/TOC/19_31/img/top.png">
+<meta property="og:image" content="https://manganimy.github.io/wsm/TOC/19_31/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/wsm/TOC/19_31/esp">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
@@ -29,12 +29,12 @@
 <body>
 <div id="container">
 	<div class="header">
-		<h1><img src="img/top.png" alt=""></h1>
+		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>Los puestos y comentarios de los autores de la Weekly Shonen Magazine de esta semana.</span></div>
 	<div class="alternate">
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm.jpg" alt="WSM issue 31"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm.png" alt="WSM issue 31"></div>
 			<div class="overlay">
-    		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm1.jpg" style="display: block; width: 100%; height:auto ; "></div>
+    		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm1.png" style="display: block; width: 100%; height:auto ; "></div>
 			</div>
 	</div>
 	
