--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -75,6 +75,13 @@
 	    <div class="desc"><h2>Weekly Shonen Magazine #30 2019</h2></div></a>
   </div>
 </div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_31/">
+      <img src="19_31/img/img_wm.png" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Magazine #31 2019</h2></div></a>
+  </div>
+</div>	
 <div class="clearfix"></div>
 	
 <div class="center" style="text-align:center; line-height:1; font-size:.85em">
