--- a/TOC/index.html
+++ b/TOC/index.html
@@ -146,6 +146,10 @@
 <h2><a href="19_31/" style="display:block; width:100%">Weekly Shonen Jump #31 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_31/">
   <img src="img/19_31.jpg">
+</a>
+<h2><a href="19_32/" style="display:block; width:100%">Weekly Shonen Jump #32 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_32/">
+  <img src="img/19_32.jpg">
 </a> 		  
   </div><!-- end content -->	
 </div> <!-- end margin -->
