--- a/TOC/19_33/index.html
+++ b/TOC/19_33/index.html
@@ -1,11 +1,26 @@
-
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-142193139-1');
+</script>
+	  <link rel="shortcut icon"
+   type="image/x-icon"
+        href="https://manganimy.github.io/TOC/img/fav.ico">
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta name="description" content="Table of contents">
-<meta name="Keywords" content="Table of contents">
+<meta property="og:title" content="Weekly Shonen Jump #33 2019">	
+<meta property="og:description" content="Table of contents &amp; Author Comments">
+<meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_33/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_33">
+<meta name="twitter:card" content="summary_large_image">
+
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
