--- a/TOC/19_31/index.html
+++ b/TOC/19_31/index.html
@@ -358,7 +358,27 @@
 
 		</div>
 
-		
+		<!-- yuuna -->
+
+		<div class="comment_area">
+
+			<h2><a href="">Yuragi-sou no Yuuna-san<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+
+			<div class="detail_area">
+
+				<div class="l_side"><img src="img/img_miura.png" alt=""></div>
+
+				<div class="r_side">
+
+					<p class="author">Tadahiro Miura</p>
+
+					Even if burgers are overfilled, they should still pack it in the package. There's no problems if eating in the store though.
+
+				</div>
+
+			</div>
+
+		</div>		
 
 		<!-- Beast Children -->
 
