--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -82,6 +82,14 @@
 	    <div class="desc"><h2>Weekly Shonen Magazine #31 2019</h2></div></a>
   </div>
 </div>	
+
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_32/">
+      <img src="19_32/img/img_wm.png" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Magazine #32 2019</h2></div></a>
+  </div>
+</div>		
 <div class="clearfix"></div>
 	
 <div class="center" style="text-align:center; line-height:1; font-size:.85em">
