--- a/wsc/TOC/esp.html
+++ b/wsc/TOC/esp.html
@@ -62,6 +62,13 @@
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_30/esp">
+      <img src="19_30/img/img_wc.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Champion #30 2019</h2></div></a>
+  </div>
+</div>
 <div class="clearfix"></div>
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
 	<p style="border-top: 1px solid #9c46ff"> </p>
