--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -75,7 +75,13 @@
 	    <div class="desc"><h2>Weekly Shonen Champion #30 2019</h2></div></a>
   </div>
 </div>
-
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_31/">
+      <img src="19_31/img/img_wc.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Champion #31 2019</h2></div></a>
+  </div>
+</div>
 <div class="clearfix"></div>
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
 	<p style="border-top: 1px solid #9c46ff"> </p>
