--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -10,7 +10,7 @@
 </script>
 	  <link rel="shortcut icon"
    type="image/x-icon"
-        href="https://manganimy.github.io/TOC/img/fav.ico">
+        href="https://manganimy.github.io/TOC/giga/img/fav.ico">
 <meta charset="UTF-8">
 <title>Shonen Jump GIGA 2019 Summer Vol.1</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
