--- a/TOC/index.html
+++ b/TOC/index.html
@@ -150,6 +150,10 @@
 <h2><a href="19_32/" style="display:block; width:100%">Weekly Shonen Jump #32 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_32/">
   <img src="img/19_32.jpg">
+</a>
+<h2><a href="19_33/" style="display:block; width:100%">Weekly Shonen Jump #33 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_33/">
+  <img src="img/19_33.jpg">
 </a> 		  
   </div><!-- end content -->	
 </div> <!-- end margin -->
