--- a/TOC/19_10/index.html
+++ b/TOC/19_10/index.html
@@ -49,9 +49,9 @@
     </div>
   </div>
   <div id="nav-center">
-<img src="https://manganimy.github.io/TOC/img/prev2.png">
-<button class="dropbtn">#10</button>
- <a href="https://manganimy.github.io/TOC/19_11/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+	  <a><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#10</button></a>
+ 	  <a href="https://manganimy.github.io/TOC/19_11/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
   <div class="dropdown">
