--- a/TOC/19_10/index.html
+++ b/TOC/19_10/index.html
@@ -10,7 +10,9 @@
 
   gtag('config', 'UA-142193139-1');
 </script>
-
+<link rel="shortcut icon"
+   type="image/x-icon"
+        href="https://manganimy.github.io/TOC/img/fav.ico">
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
