--- a/TOC/19_11/index.html
+++ b/TOC/19_11/index.html
@@ -70,7 +70,7 @@
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
 <div id="grid-container">
   <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_10/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
-  <div class="grid-item"><div class="img_wj"><img src="https://manganimy.github.io/TOC/19_10/img/img_wj.jpg" alt=""></div></div>
+  <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
   <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_12/"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
 </div>
 	</div><!-- end .header -->
