--- a/TOC/19_18/index.html
+++ b/TOC/19_18/index.html
@@ -10,7 +10,9 @@
 
   gtag('config', 'UA-142193139-1');
 </script>
-
+<link rel="shortcut icon"
+   type="image/x-icon"
+        href="https://manganimy.github.io/TOC/img/fav.ico">
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
@@ -25,13 +27,53 @@
 </head>
 
 <body>
+<div class="navbar">
+<div class="fit">
+  
+  <div class="dropdown">
+    <button class="dropbtn">Menu 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/">Home</a>
+      <a href="/TOC">Weekly Shonen Jump Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
+    </div>
+  </div> 
+ <div class="dropdown">
+    <button class="dropbtn">SP 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/TOC/giga">GIGA</a>
+    </div>
+  </div>
+  <div id="nav-center">
+	  <a href="https://manganimy.github.io/TOC/19_17/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#18</button></a>
+ 	  <a href="https://manganimy.github.io/TOC/19_19/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+  </div>
+  <div class="lang">
+  <div class="dropdown">
+    <button class="dropbtn">eng 
+      <i class="fa fa-caret-down"></i>
+    </button>
+     </div>
+  </div> 
+</div>
+</div>	<!-- end navbar -->
 <div id="container">
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
-		<div class="img_wj"><img src="img/img_wj.jpg" alt=""></div>
+<div id="grid-container">
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_17/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
+  <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_19/"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+</div>
 	</div><!-- end .header -->
-
 	<div class="contents">
 		
 		<!-- Demon Slayer: Kimetsu no Yaiba -->
