--- a/TOC/19_29/esp.html
+++ b/TOC/19_29/esp.html
@@ -27,11 +27,55 @@
 </head>
 
 <body>
+<div class="navbar">
+<div class="fit">
+  
+  <div class="dropdown">
+    <button class="dropbtn">Menu 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/">Home</a>
+      <a href="/TOC/esp">Weekly Shonen Jump Hub</a>
+      <a href="/wss/TOC/esp">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC/esp">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC/esp">Weekly Shonen Champion Hub</a>
+    </div>
+  </div> 
+ <div class="dropdown">
+    <button class="dropbtn">SP 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/TOC/giga">GIGA</a>
+    </div>
+  </div>
+  <div id="nav-center">
+	  <a><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#29</button></a>
+ 	  <a href="https://manganimy.github.io/TOC/19_30/esp"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+  </div>
+  <div class="lang">
+  <div class="dropdown">
+    <button class="dropbtn">esp 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href=".../index">eng</a>
+    </div>	  
+     </div>
+  </div> 
+</div>
+</div>	<!-- end navbar -->
 <div id="container">
 	<div class="header">
 		<h1><img src="img/top_esp.jpg" alt=""></h1>
 		<div class="txt_read"><span>Los puestos y comentarios de los autores de la Weekly Shonen Jump de esta semana.</span></div>
-		<div class="img_wj"><img src="img/img_wj.jpg" alt=""></div>
+<div id="grid-container">
+  <div class="grid-item"><div class="img_nav"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></div></div>
+  <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_30/esp"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+</div>
 	</div><!-- end .header -->
 
 	<div class="contents">
