--- a/TOC/19_2223/index.html
+++ b/TOC/19_2223/index.html
@@ -52,7 +52,7 @@
   </div>
   <div id="nav-center">
 	  <a href="https://manganimy.github.io/TOC/19_21/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
-	  <a><button class="dropbtn">#22・23</button></a>
+	  <a><button class="dropbtn">#22|23</button></a>
  	  <a href="https://manganimy.github.io/TOC/19_24/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
