--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -86,7 +86,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="19_32/">
-      <img src="19_32/img/img_wm.png" alt="" width="600" height="400">
+      <img src="19_32/img/img_wm.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Weekly Shonen Magazine #32 2019</h2></div></a>
   </div>
 </div>		
