--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -84,7 +84,22 @@
 	    <div class="desc"><h2>Weekly Shonen Sunday #30 2019</h2></div></a>  
 	</div>
 </div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_31/">
+      <img src="19_31/img/img_ss.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Sunday #31 2019</h2></div></a>  
+	</div>
+</div>	
 	
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_32/">
+      <img src="19_32/img/img_ss.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Sunday #32 2019</h2></div></a>  
+	</div>
+</div>	
 <div class="clearfix"></div>
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
 	<p style="border-top: 1px solid red"> </p>
