--- a/TOC/19_32/index.html
+++ b/TOC/19_32/index.html
@@ -263,7 +263,7 @@
 				<div class="l_side"><img src="img/img_miura.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tadahiro Miura</p>
-					Weather is being a bit intense and windy in the whole country. It will be profitable if you harvest vegetables though. That's good.
+					Weather is being a bit intense with rain and wind in the whole country. It will be profitable if you harvest vegetables though. That's good
 				</div>
 			</div>
 		</div>
