--- a/TOC/index.html
+++ b/TOC/index.html
@@ -25,7 +25,7 @@
 <div class="navbar">
 <div class="fit">
   <div class="dropdown">
-    <button class="dropbtn">Menu 
+    <button class="dropbtn"  onclick="">Menu 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -37,7 +37,7 @@
     </div>
   </div> 
  <div class="dropdown">
-    <button class="dropbtn">SP 
+    <button class="dropbtn"  onclick="">SP 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -46,7 +46,7 @@
   </div> 	
   <div class="lang">
   <div class="dropdown">
-    <button class="dropbtn">eng 
+    <button class="dropbtn"  onclick="">eng 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
