--- a/TOC/index.html
+++ b/TOC/index.html
@@ -25,9 +25,9 @@
 <div class="navbar">
 <div class="fit">
   <div class="dropdown">
-    <button class="dropbtn"  onclick="">Menu 
+	  <a><button class="dropbtn">Menu
       <i class="fa fa-caret-down"></i>
-    </button>
+    </button></a> 
     <div class="dropdown-content">
       <a href="/">Home</a>
       <a href="#">Weekly Shonen Jump Hub</a>
@@ -37,18 +37,18 @@
     </div>
   </div> 
  <div class="dropdown">
-    <button class="dropbtn"  onclick="">SP 
+	 <a><button class="dropbtn">SP
       <i class="fa fa-caret-down"></i>
-    </button>
+    </button></a> 
     <div class="dropdown-content">
       <a href="giga">GIGA</a>
     </div>
   </div> 	
   <div class="lang">
   <div class="dropdown">
-    <button class="dropbtn"  onclick="">eng 
+    <a><button class="dropbtn">eng 
       <i class="fa fa-caret-down"></i>
-    </button>
+	    </button></a>
     <div class="dropdown-content">
       <a href="esp">esp</a>
     </div>
