--- a/TOC/index.html
+++ b/TOC/index.html
@@ -25,9 +25,9 @@
 <div class="navbar">
 <div class="fit">
   <div class="dropdown">
-	  <a><button class="dropbtn">Menu
+	  <button class="dropbtn"><a>Menu</a>
       <i class="fa fa-caret-down"></i>
-    </button></a> 
+    </button>
     <div class="dropdown-content">
       <a href="/">Home</a>
       <a href="#">Weekly Shonen Jump Hub</a>
@@ -37,18 +37,18 @@
     </div>
   </div> 
  <div class="dropdown">
-	 <a><button class="dropbtn">SP
+	 <button class="dropbtn"><a>SP</a>
       <i class="fa fa-caret-down"></i>
-    </button></a> 
+    </button>
     <div class="dropdown-content">
       <a href="giga">GIGA</a>
     </div>
   </div> 	
   <div class="lang">
   <div class="dropdown">
-    <a><button class="dropbtn">eng 
+	  <button class="dropbtn"><a>eng</a> 
       <i class="fa fa-caret-down"></i>
-	    </button></a>
+	    </button>
     <div class="dropdown-content">
       <a href="esp">esp</a>
     </div>
