--- a/TOC/index.html
+++ b/TOC/index.html
@@ -25,7 +25,7 @@
 <div class="navbar">
 <div class="fit">
   <div class="dropdown">
-	  <button class="dropbtn"><a style="padding=0">Menu</a>
+	  <button class="dropbtn"><a style="padding:0">Menu</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -37,7 +37,7 @@
     </div>
   </div> 
  <div class="dropdown">
-	 <button class="dropbtn"><a style="padding=0">SP</a>
+	 <button class="dropbtn"><a style="padding:0">SP</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -46,7 +46,7 @@
   </div> 	
   <div class="lang">
   <div class="dropdown">
-	  <button class="dropbtn"><a style="padding=0">eng</a> 
+	  <button class="dropbtn"><a style="padding:0">eng</a> 
       <i class="fa fa-caret-down"></i>
 	    </button>
     <div class="dropdown-content">
