--- a/TOC/index.html
+++ b/TOC/index.html
@@ -25,7 +25,7 @@
 <div class="navbar">
 <div class="fit">
   <div class="dropdown">
-	  <button class="dropbtn"><a style="padding:0; color:black;">Menu</a>
+	  <button class="dropbtn"><a style="padding:0;">Menu</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
