--- a/TOC/index.html
+++ b/TOC/index.html
@@ -154,7 +154,13 @@
 <h2><a href="19_33/" style="display:block; width:100%">Weekly Shonen Jump #33 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_33/">
   <img src="img/19_33.jpg">
-</a> 		  
+</a> 
+<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
+	<p style="border-top: 2px solid yellow"> </p>
+<div class="center" style="text-align:center;">
+	<h3>Archival</h3> 
+</div>			  
+		  
   </div><!-- end content -->	
 </div> <!-- end margin -->
 </body>
