--- a/TOC/index.html
+++ b/TOC/index.html
@@ -24,7 +24,7 @@
 <body>
 <div class="navbar">
 <div class="fit">
-  <div class="dropdown">
+  <div class="dropdown" onclick = "void(0)">
 	  <button class="dropbtn"><a href="#" style="padding:0;">Menu</a>
       <i class="fa fa-caret-down"></i>
     </button>
@@ -36,7 +36,7 @@
       <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
     </div>
   </div> 
- <div class="dropdown">
+ <div class="dropdown" onclick = "void(0)">
 	 <button class="dropbtn"><a href="#" style="padding:0;">SP</a>
       <i class="fa fa-caret-down"></i>
     </button>
@@ -45,7 +45,7 @@
     </div>
   </div> 	
   <div class="lang">
-  <div class="dropdown">
+  <div class="dropdown" onclick = "void(0)">
 	  <button class="dropbtn"><a href="#" style="padding:0;">eng</a> 
       <i class="fa fa-caret-down"></i>
 	    </button>
