--- a/TOC/index.html
+++ b/TOC/index.html
@@ -157,7 +157,7 @@
 </a> 
 <img src="img/mascot.png" style="width:20vw; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
-<div class="center" style="text-align:center;">
+<div style="text-align:center;">
 	<h3>Archival</h3> 
 </div>			  
 		  
