--- a/TOC/index.html
+++ b/TOC/index.html
@@ -155,7 +155,7 @@
 <a href="19_33/">
   <img src="img/19_33.jpg">
 </a> 
-<img src="img/mascot.png" style="width:20vw; margin-top:10px;" class="center">
+<img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
 	<h3>Archival</h3> 
