--- a/TOC/index.html
+++ b/TOC/index.html
@@ -24,11 +24,11 @@
 <body>
 <div class="navbar">
 <div class="fit">
-  <div class="dropdown" onclick = "void(0)">
-	  <button class="dropbtn"><a href="#" onclick="return false;" style="padding:0;">Menu</a>
+  <div class="dropdown">
+	   <button class="dropbtn" onclick="myFunction(this)">Menu
       <i class="fa fa-caret-down"></i>
     </button>
-    <div class="dropdown-content">
+    <div class="dropdown-content" id="myDropdown1">
       <a href="/">Home</a>
       <a href="#">Weekly Shonen Jump Hub</a>
       <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
@@ -36,20 +36,20 @@
       <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
     </div>
   </div> 
- <div class="dropdown" onclick = "void(0)">
-	 <button class="dropbtn"><a href="#" onclick="return false;" style="padding:0;">SP</a>
+ <div class="dropdown">
+	 <button class="dropbtn" onclick="myFunction(this)">SP
       <i class="fa fa-caret-down"></i>
     </button>
-    <div class="dropdown-content">
+    <div class="dropdown-content" id="myDropdown2">
       <a href="giga">GIGA</a>
     </div>
   </div> 	
   <div class="lang">
-  <div class="dropdown" onclick = "void(0)">
-	  <button class="dropbtn"><a href="#" onclick="return false;" style="padding:0;">eng</a> 
+  <div class="dropdown">
+	  <button class="dropbtn" onclick="myFunction(this)">eng 
       <i class="fa fa-caret-down"></i>
 	    </button>
-    <div class="dropdown-content">
+    <div class="dropdown-content"id="myDropdown3" >
       <a href="esp">esp</a>
     </div>
     </div>
@@ -163,4 +163,31 @@
 		  
   </div><!-- end content -->	
 </div> <!-- end margin -->
+
+<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction(a) {
+  a.parentNode.getElementsByClassName("dropdown-content")[0].classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(e) {
+  if (!e.target.matches('.dropbtn')) {
+  var myDropdown1 = document.getElementById("myDropdown1");
+  var myDropdown2 = document.getElementById("myDropdown2");
+  var myDropdown3 = document.getElementById("myDropdown3");
+    if (myDropdown1.classList.contains('show')) {
+      myDropdown1.classList.remove('show');
+    }
+    else if (myDropdown2.classList.contains('show')) {
+      myDropdown2.classList.remove('show');
+    }
+    else if (myDropdown3.classList.contains('show')) {
+      myDropdown3.classList.remove('show');
+    }
+  }
+}
+
+</script>	
 </body>
