--- a/TOC/index.html
+++ b/TOC/index.html
@@ -180,10 +180,10 @@ window.onclick = function(e) {
     if (myDropdown1.classList.contains('show')) {
       myDropdown1.classList.remove('show');
     }
-    else if (myDropdown2.classList.contains('show')) {
+    if (myDropdown2.classList.contains('show')) {
       myDropdown2.classList.remove('show');
     }
-    else if (myDropdown3.classList.contains('show')) {
+    if (myDropdown3.classList.contains('show')) {
       myDropdown3.classList.remove('show');
     }
   }
