--- a/TOC/giga/summer_19_01/esp.html
+++ b/TOC/giga/summer_19_01/esp.html
@@ -51,7 +51,7 @@
     </div>
   </div>
   <div id="nav-center">
-	  <a href="https://manganimy.github.io/TOC/19_30/esp"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
 	  <a><button class="dropbtn">#31</button></a>
  	  <a><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
@@ -72,8 +72,8 @@
 		<h1><img src="img/top_esp.jpg" alt=""></h1>
 		<div class="txt_read"><span>Los puestos y comentarios de los autores de la Weekly Shonen Jump de esta semana.</span></div>
 <div id="grid-container">
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_30/esp"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
-  <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
+  <div class="grid-item"><div class="img_nav"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></div></div>
+  <div class="grid-item"><div class="img_wj"><img src="img/img_giga.png" alt=""></div></div>
   <div class="grid-item"><div class="img_nav"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></div></div>  
 </div>
 	</div><!-- end .header -->
