--- a/TOC/giga/summer_19_01/esp.html
+++ b/TOC/giga/summer_19_01/esp.html
@@ -52,7 +52,7 @@
   </div>
   <div id="nav-center">
 	  <a><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
-	  <a><button class="dropbtn">#31</button></a>
+	  <a><button class="dropbtn">Summer #1</button></a>
  	  <a><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
