--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -34,10 +34,10 @@
     </button>
     <div class="dropdown-content">
       <a href="/">Home</a>
-      <a href="/TOC/esp">Weekly Shonen Jump Hub</a>
-      <a href="/wss/TOC/esp">Weekly Shonen Sunday Hub</a>
-      <a href="/wsm/TOC/esp">Weekly Shonen Magazine Hub</a>
-      <a href="/wsc/TOC/esp">Weekly Shonen Champion Hub</a>
+      <a href="/TOC">Weekly Shonen Jump Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
     </div>
   </div> 
  <div class="dropdown">
@@ -45,7 +45,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="/TOC/giga">GIGA</a>
+      <a href="/TOC/giga/esp">GIGA</a>
     </div>
   </div>
   <div id="nav-center">
@@ -55,11 +55,11 @@
   </div>
   <div class="lang">
   <div class="dropdown">
-    <button class="dropbtn">esp 
+    <button class="dropbtn">eng 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="index">eng</a>
+      <a href="esp">esp</a>
     </div>	  
      </div>
   </div> 
