--- a/TOC/giga/summer_19_01/esp.html
+++ b/TOC/giga/summer_19_01/esp.html
@@ -47,7 +47,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="/TOC/giga">GIGA</a>
+      <a href="/TOC/giga/esp">GIGA</a>
     </div>
   </div>
   <div id="nav-center">
