--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
+</head>
 
 <body>
 <div class="navbar">
