--- a/TOC/giga/summer_19_01/esp.html
+++ b/TOC/giga/summer_19_01/esp.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -7,20 +7,19 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-142193139-1');
 </script>
 	  <link rel="shortcut icon"
    type="image/x-icon"
-        href="https://manganimy.github.io/TOC/img/fav.ico">
+        href="https://manganimy.github.io/TOC/giga/img/fav.ico">
 <meta charset="UTF-8">
-<title>tabla de contenidos</title>
+<title>Shonen Jump GIGA 2019 Summer Vol.1</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump #31 2019">	
+<meta property="og:title" content="Shonen Jump GIGA 2019 Summer Vol.1">	
 <meta property="og:description" content="Tabla de contenidos y comentarios de los autores">
-<meta name="Keywords" content="Table of contents">
-<meta property="og:image" content="https://manganimy.github.io/TOC/19_31/img/top_esp.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/19_31/esp.html">
+<meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump, JumpGIGA, GIGA">
+<meta property="og:image" content="https://manganimy.github.io/TOC/giga/summer_19_01/img/top.png">
+<meta property="og:url" content="https://manganimy.github.io/TOC/giga/summer_19_01/esp">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
