--- a/TOC/giga/summer_19_01/index.html
+++ b/TOC/giga/summer_19_01/index.html
@@ -69,7 +69,7 @@
 <div id="container">
 	<div class="header">
 		<h1><a target="_blank" href="img/topf.png"><img src="img/top.png" alt=""></a></h1>
-		<div class="txt_read"><span>Los puestos y comentarios de los autores de la Weekly Shonen Jump de esta semana.</span></div>
+		<div class="txt_read"><span>Shonen Jump GIGA 2019 Summer Vol.1</span></div>
 <div id="grid-container">
   <div class="grid-item"><div class="img_nav"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></div></div>
   <div class="grid-item"><div class="img_wj"><img src="img/img_giga.png" alt=""></div></div>
